Hello JavaScript change
Assignment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
   <body>
     <h1>My very first project</h1>
-    <p>This will hopefully work out somehow</p>
+    <p>Write your name and press the button to proceed</p>
+    <input />
+    <button>Button</button>
+    <h3></h3>
     <script src="app.js"></script>
   </body>
 </html>
