--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
   <body>
     <h1>My very first project</h1>
-    <p>Write your name and press the button to proceed</p>
-    <input />
+    <p>Write your name, age and email, then press the button to proceed</p>
+    <input id="name" />
+    <input id="age" />
+    <input id="email" />
     <button>Button</button>
     <h3></h3>
     <script src="app.js"></script>
