--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <body>
     <h1>My very first project</h1>
     <p>Write your name, age and email, then press the button to proceed</p>
-    <input id="name" />
-    <input id="age" />
-    <input id="email" />
-    <button>Button</button>
+
+    <input placeholder="Name" id="name" />
+    <input placeholder="Age" id="age" />
+    <input placeholder="Email" id="email" />
+    <button id="knap">Button</button>
     <h3></h3>
     <script src="app.js"></script>
   </body>
